# gechu-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev-db.yml  pyproject.toml  tmp_api_spec_test.xlsx
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  deploy.yml
apps/core/: auth_test_utils.py  auth_utils.py  authentication.py  models.py  permissions.py  test_cookie_auth_integration.py  testcase.py
apps/core/exceptions/: exception_handler.py  exception_message.py
apps/core/serializers/: error_serializer.py
apps/core/utils/: pagination.py
apps/games/: admin.py  chosung.py  pagination.py  tasks.py  urls.py
apps/games/fixtures/: external_stores.json
apps/games/igdb/: cache.py  client.py  converters.py  exceptions.py  mappings.py  response_builder.py  serializers.py  service.py  tasks.py  views.py
apps/games/migrations/: 0001_initial.py  0002_remove_gamemedia_data_480_remove_gamemedia_data_max_and_more.py  0003_alter_game_esrb_rating.py  0004_remove_game_idx_games_age_rating_and_more.py  0005_delete_game_delete_gamegenre_delete_gameplatform_and_more.py  0006_alter_genre_options_alter_platform_options_and_more.py  0008_alter_genre_igdb_id_alter_tag_igdb_id_and_more.py  0009_update_genres_fighting_arcade.py  0010_update_platforms_names.py
apps/games/models/: __init__.py  catalog.py  external_store.py  game.py  game_genre.py  game_media.py  game_meida.py  game_platform.py  game_store.py  game_tag.py  genre.py  metadata.py  platform.py  store.py  tag.py
apps/games/rawg/: client.py  converters.py  exceptions.py
apps/games/serializers/: __init__.py  game_detail.py  game_list.py  game_similar.py  genre_list.py  platform_list.py  rawg_sync.py  similar_game.py  tag_list.py
apps/games/services/: game_detail.py  game_list.py  game_tag_mapping.py  (+6 more)
apps/interactions/: serializers.py  tests.py  urls.py  urls_admin.py  urls_admin_context.py  views.py  views_admin.py  views_admin_user.py
apps/preferences/: apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/recommendations/: serializers.py  services.py  tasks.py  tests.py  urls.py  urls_admin.py  views.py  views_admin.py
apps/users/: admin.py  tasks.py  tests.py  urls.py  urls_admin.py  views_admin.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  local.py  prod.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
resources/nginx/: dev.Dockerfile  nginx.dev.conf  nginx.prod.conf  prod.Dockerfile
resources/scripts/: code_formatting.sh  test.sh
scripts/: ci-local.sh  update_api_spec_workbook.ps1
(+121 files in other folders)
