[tool.poetry]
name = "gechu-backend"
version = "0.1.0"
description = "Gechu backend (Django + DRF)"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
django = "^6.0.2"
djangorestframework = "^3.16.1"
psycopg = {version = "^3.2.0", extras = ["binary"]}
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"