[tool.poetry]
name = "gechu-backend"
version = "0.1.0"
description = "사용자 취향 기반 게임 추천 서비스"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
django = ">=6.0.2,<7.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
drf-spectacular = ">=0.29.0,<0.30.0"
django-filter = ">=25.2,<26.0"
django-cors-headers = ">=4.9.0,<5.0.0"
psycopg = "^3.1"
django-redis = ">=6.0.0,<7.0.0"
celery = {version = ">=5.6.2,<6.0.0", extras = ["redis"]}
python-dotenv = ">=1.2.2,<2.0.0"
requests = "^2.32.5"
whitenoise = "^6.12.0"



[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.2.0"
sentry-sdk = "^2.53.0"
ruff = "^0.15.4"
mypy = "^1.19.1"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.9"}
coverage = "^7.13.4"
djangorestframework-stubs = "^3.16.8"
django-filter-stubs = "^0.1.3"
celery-types = "^0.24.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^25.1.0"
sentry-sdk = "^2.53.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (line-length로 관리)
]


[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "F401"]
"*/settings/*" = ["F401", "F403", "F405"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true
exclude = [
    "migrations/",
]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/tests.py",
    "*/tests_*.py",
    "*/settings/*",
    "*/manage.py",
    "*/urls.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*testcase.py",
    "seed_*.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80